<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    android:paddingTop="10dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:title="About"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="9"
            app:srcCompat="@drawable/logo_about"
            android:id="@+id/imageView2"
            android:paddingTop="10dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:paddingTop="10dp">

            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descr"
                android:textSize="22sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center" />

            <TextView
                android:text="@string/quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quote"
                android:layout_below="@id/descr"
                android:paddingTop="20dp"
                android:textSize="22sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical"
                android:textStyle="italic" />

            <TextView
                android:text="@string/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quote"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:id="@+id/author"
                android:textStyle="normal|bold"
                android:textSize="22sp" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>